Update color list

--- a/app/src/main/res/layout/recycler_view_component.xml
+++ b/app/src/main/res/layout/recycler_view_component.xml
@@ -26,9 +26,9 @@
         android:id="@+id/rb_movie_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:progressTint="#ffa235"
-        android:progressBackgroundTint="#3e4265"
-        android:secondaryProgressTint="#3e4265"
+        android:progressTint="@color/star_fill"
+        android:progressBackgroundTint="@color/inactive_tab_color"
+        android:secondaryProgressTint="@color/inactive_tab_color"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
