--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -54,9 +54,9 @@
                         android:numStars="5"
                         android:stepSize=".5"
                         android:isIndicator="true"
-                        android:progressTint="#ffa235"
-                        android:progressBackgroundTint="#3e4265"
-                        android:secondaryProgressTint="#3e4265"
+                        android:progressTint="@color/star_fill"
+                        android:progressBackgroundTint="@color/inactive_tab_color"
+                        android:secondaryProgressTint="@color/inactive_tab_color"
                         android:rating="4.5"
                         android:scaleX="1"
                         android:scaleY="1"
@@ -128,6 +128,7 @@
                         android:textSize="28sp"
                         android:gravity="center_horizontal"
                         android:layout_marginBottom="10dp"
+                        android:paddingHorizontal="5dp"
                         />
 
 
